--- a/.firebaserc
+++ b/.firebaserc
@@ -4,7 +4,8 @@
     "receptionInvite": "receptioninvite-62615",
     "receptionRR": "receptioninvite-62615",
     "weddig": "rashwedding-4308d",
-    "wedding": "rashwedding-4308d"
+    "wedding": "rashwedding-4308d",
+    "vikshInvite": "vikshithainvite"
   },
   "targets": {
     "rashwedding-4308d": {
